fix(react): resolve lint issues
Signed-off-by: sam <sam@freighttrust.com>

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Backbone Cabal Custom RPC"
-      content="backbonecabal custom rpc"
-    />
+    <meta name="Backbone Cabal Custom RPC" content="backbonecabal custom rpc" />
 
-    <meta property="og:title" content="Backbone Cabal Custom RPC">
-    <meta property="og:type" content="YCabal MetaMask Custom RPC Provider">
-    <meta property="og:url" content="%PUBLIC_URL%/logo192.png">
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png">
+    <meta property="og:title" content="Backbone Cabal Custom RPC" />
+    <meta property="og:type" content="YCabal MetaMask Custom RPC Provider" />
+    <meta property="og:url" content="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -46,12 +43,18 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-  
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () {
+        ga.q.push(arguments);
+      };
+      ga.q = [];
+      ga.l = +new Date();
+      ga('create', 'UA-XXXXX-Y', 'auto');
+      ga('set', 'anonymizeIp', true);
+      ga('set', 'transport', 'beacon');
+      ga('send', 'pageview');
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
   </body>
 </html>
